--- a/css/default.css
+++ b/css/default.css
@@ -57,7 +57,7 @@ body {
   background-color: #fff;
 }
 
-[tabindex="-1"]:focus {
+/* [tabindex="-1"]:focus {
   outline: 0 !important;
 }
 
@@ -65,7 +65,7 @@ hr {
   box-sizing: content-box;
   height: 0;
   overflow: visible;
-}
+} */
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
@@ -77,7 +77,7 @@ p {
   margin-bottom: 1rem;
 }
 
-abbr[title],
+/* abbr[title],
 abbr[data-original-title] {
   text-decoration: underline;
   text-decoration: underline dotted;
@@ -142,7 +142,7 @@ sub {
 
 sup {
   top: -.5em;
-}
+} */
 
 a {
   color: #007bff;
@@ -165,7 +165,7 @@ a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
   text-decoration: none;
 }
 
-a:not([href]):not([tabindex]):focus {
+/* a:not([href]):not([tabindex]):focus {
   outline: 0;
 }
 
@@ -185,7 +185,7 @@ pre {
 
 figure {
   margin: 0 0 1rem;
-}
+} */
 
 img {
   vertical-align: middle;
