--- a/css/default.css
+++ b/css/default.css
@@ -77,73 +77,6 @@ p {
   margin-bottom: 1rem;
 }
 
-/* abbr[title],
-abbr[data-original-title] {
-  text-decoration: underline;
-  text-decoration: underline dotted;
-  cursor: help;
-  border-bottom: 0;
-  text-decoration-skip-ink: none;
-}
-
-address {
-  margin-bottom: 1rem;
-  font-style: normal;
-  line-height: inherit;
-}
-
-ol,
-ul,
-dl {
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-
-ol ol,
-ul ul,
-ol ul,
-ul ol {
-  margin-bottom: 0;
-}
-
-dt {
-  font-weight: 700;
-}
-
-dd {
-  margin-bottom: .5rem;
-  margin-left: 0;
-}
-
-blockquote {
-  margin: 0 0 1rem;
-}
-
-b,
-strong {
-  font-weight: bolder;
-}
-
-small {
-  font-size: 80%;
-}
-
-sub,
-sup {
-  position: relative;
-  font-size: 75%;
-  line-height: 0;
-  vertical-align: baseline;
-}
-
-sub {
-  bottom: -.25em;
-}
-
-sup {
-  top: -.5em;
-} */
-
 a {
   color: #007bff;
   text-decoration: none;
@@ -165,28 +98,6 @@ a:not([href]):not([tabindex]):hover, a:not([href]):not([tabindex]):focus {
   text-decoration: none;
 }
 
-/* a:not([href]):not([tabindex]):focus {
-  outline: 0;
-}
-
-pre,
-code,
-kbd,
-samp {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  font-size: 1em;
-}
-
-pre {
-  margin-top: 0;
-  margin-bottom: 1rem;
-  overflow: auto;
-}
-
-figure {
-  margin: 0 0 1rem;
-} */
-
 img {
   vertical-align: middle;
   border-style: none;
@@ -201,7 +112,7 @@ table {
   border-collapse: collapse;
 }
 
-caption {
+/* caption {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
   color: #6c757d;
@@ -211,21 +122,21 @@ caption {
 
 th {
   text-align: inherit;
-}
+} */
 
-label {
+/* label {
   display: inline-block;
   margin-bottom: 0.5rem;
-}
+} */
 
 button {
   border-radius: 0;
 }
 
-button:focus {
+/* button:focus {
   outline: 1px dotted;
   outline: 5px auto -webkit-focus-ring-color;
-}
+} */
 
 button,
 select,
@@ -247,9 +158,9 @@ select {
   text-transform: none;
 }
 
-select {
+/* select {
   word-wrap: normal;
-}
+} */
 
 button,
 [type="button"],
@@ -286,7 +197,7 @@ input[type="month"] {
   -webkit-appearance: listbox;
 }
 
-textarea {
+/* textarea {
   overflow: auto;
   resize: vertical;
 }
@@ -296,9 +207,9 @@ fieldset {
   padding: 0;
   margin: 0;
   border: 0;
-}
+} */
 
-legend {
+/* legend {
   display: block;
   width: 100%;
   max-width: 100%;
@@ -308,11 +219,11 @@ legend {
   line-height: inherit;
   color: inherit;
   white-space: normal;
-}
+} */
 
-progress {
+/* progress {
   vertical-align: baseline;
-}
+} */
 
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
