--- a/js/owl-carousel/owl.carousel.css
+++ b/js/owl-carousel/owl.carousel.css
@@ -1,3 +1,9 @@
+/* 
+ * 	Core Owl Carousel CSS File
+ *	v1.3.3
+ */
+
+/* clearfix */
 .owl-carousel .owl-wrapper:after {
 	content: ".";
 	display: block;
@@ -23,11 +29,21 @@
 	position: relative;
 	width: 100%;
 }
-
+.owl-carousel .owl-wrapper-outer.autoHeight{
+	-webkit-transition: height 500ms ease-in-out;
+	-moz-transition: height 500ms ease-in-out;
+	-ms-transition: height 500ms ease-in-out;
+	-o-transition: height 500ms ease-in-out;
+	transition: height 500ms ease-in-out;
+}
+	
 .owl-carousel .owl-item{
 	float: left;
 }
-
+.owl-controls .owl-page,
+.owl-controls .owl-buttons div{
+	cursor: pointer;
+}
 .owl-controls {
 	-webkit-user-select: none;
 	-khtml-user-select: none;
@@ -35,6 +51,11 @@
 	-ms-user-select: none;
 	user-select: none;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+/* mouse grab icon */
+.grabbing { 
+    cursor:url(grabbing.png) 8 8, move;
 }
 
 /* fix */
