--- a/css/default.css
+++ b/css/default.css
@@ -268,19 +268,19 @@ hr {
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-/* small,
+small,
 .small {
   font-size: 80%;
   font-weight: 400;
-} */
+}
 
-/* mark,
+mark,
 .mark {
   padding: 0.2em;
   background-color: #fcf8e3;
-} */
+}
 
-/* .list-unstyled {
+.list-unstyled {
   padding-left: 0;
   list-style: none;
 }
@@ -288,9 +288,9 @@ hr {
 .list-inline {
   padding-left: 0;
   list-style: none;
-} */
+}
 
-/* .list-inline-item {
+.list-inline-item {
   display: inline-block;
 }
 
@@ -300,9 +300,9 @@ hr {
 
 .purchase-list__item + .purchase-list__item {
   margin-top: 10px;
-} */
+}
 
-/* .initialism {
+.initialism {
   font-size: 90%;
   text-transform: uppercase;
 }
@@ -316,27 +316,27 @@ hr {
   display: block;
   font-size: 80%;
   color: #6c757d;
-} */
+}
 
-/* .blockquote-footer::before {
+.blockquote-footer::before {
   content: "\2014\00A0";
 }
 
 .img-fluid {
   max-width: 100%;
   height: auto;
-} */
+}
 
-/* .img-thumbnail {
+.img-thumbnail {
   padding: 0.25rem;
   background-color: #fff;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
   height: auto;
-} */
+}
 
-/* .figure {
+.figure {
   display: inline-block;
 }
 
@@ -348,7 +348,7 @@ hr {
 .figure-caption {
   font-size: 90%;
   color: #6c757d;
-} */
+}
 
 @media (min-width: 576px) {
   .container {
