Откат сжатися пнг

--- a/css/main.css
+++ b/css/main.css
@@ -315,7 +315,7 @@ footer {
 }
 
 .card {
-    background: url("../img/cbg.webp");
+    background: url("../img/cbg.jpg");
     color: #333;
     border-radius: 20px;
     box-sizing: border-box;
@@ -702,7 +702,7 @@ html {
 }
 
 .description_critical {
-    background: url('../img/cbg.webp');
+    background: url('../img/cbg.jpg');
     color: #000;
     border-radius: 20px;
     margin-top: -20px;
@@ -729,7 +729,7 @@ html {
     width: 100%;
     margin-top: 40px;
     display: block;
-    background: url(../img/cam2.webp);
+    background: url(../img/cam2.jpg);
     border-radius: 20px;
     background-size: cover;
     background-position: 0 0;
