--- a/css/default.css
+++ b/css/default.css
@@ -61,6 +61,16 @@ body {
   background-color: #fff;
 }
 
+/* [tabindex="-1"]:focus {
+  outline: 0 !important;
+}
+
+hr {
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+} */
+
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 0.5rem;
@@ -106,9 +116,31 @@ table {
   border-collapse: collapse;
 }
 
+/* caption {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  color: #6c757d;
+  text-align: left;
+  caption-side: bottom;
+}
+
+th {
+  text-align: inherit;
+} */
+
+/* label {
+  display: inline-block;
+  margin-bottom: 0.5rem;
+} */
+
 button {
   border-radius: 0;
 }
+
+/* button:focus {
+  outline: 1px dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+} */
 
 button,
 select,
@@ -129,6 +161,10 @@ button,
 select {
   text-transform: none;
 }
+
+/* select {
+  word-wrap: normal;
+} */
 
 button,
 [type="button"],
@@ -164,6 +200,34 @@ input[type="datetime-local"],
 input[type="month"] {
   -webkit-appearance: listbox;
 }
+
+/* textarea {
+  overflow: auto;
+  resize: vertical;
+}
+
+fieldset {
+  min-width: 0;
+  padding: 0;
+  margin: 0;
+  border: 0;
+} */
+
+/* legend {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  padding: 0;
+  margin-bottom: .5rem;
+  font-size: 1.5rem;
+  line-height: inherit;
+  color: inherit;
+  white-space: normal;
+} */
+
+/* progress {
+  vertical-align: baseline;
+} */
 
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
@@ -268,19 +332,19 @@ hr {
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-/* small,
+small,
 .small {
   font-size: 80%;
   font-weight: 400;
-} */
+}
 
-/* mark,
+mark,
 .mark {
   padding: 0.2em;
   background-color: #fcf8e3;
-} */
+}
 
-/* .list-unstyled {
+.list-unstyled {
   padding-left: 0;
   list-style: none;
 }
@@ -288,9 +352,9 @@ hr {
 .list-inline {
   padding-left: 0;
   list-style: none;
-} */
+}
 
-/* .list-inline-item {
+.list-inline-item {
   display: inline-block;
 }
 
@@ -300,9 +364,9 @@ hr {
 
 .purchase-list__item + .purchase-list__item {
   margin-top: 10px;
-} */
+}
 
-/* .initialism {
+.initialism {
   font-size: 90%;
   text-transform: uppercase;
 }
@@ -316,27 +380,27 @@ hr {
   display: block;
   font-size: 80%;
   color: #6c757d;
-} */
+}
 
-/* .blockquote-footer::before {
+.blockquote-footer::before {
   content: "\2014\00A0";
 }
 
 .img-fluid {
   max-width: 100%;
   height: auto;
-} */
+}
 
-/* .img-thumbnail {
+.img-thumbnail {
   padding: 0.25rem;
   background-color: #fff;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
   height: auto;
-} */
+}
 
-/* .figure {
+.figure {
   display: inline-block;
 }
 
@@ -348,6 +412,55 @@ hr {
 .figure-caption {
   font-size: 90%;
   color: #6c757d;
+}
+
+/* code {
+  font-size: 87.5%;
+  color: #e83e8c;
+  word-break: break-word;
+}
+
+a > code {
+  color: inherit;
+} */
+/*
+kbd {
+  padding: 0.2rem 0.4rem;
+  font-size: 87.5%;
+  color: #fff;
+  background-color: #212529;
+  border-radius: 0.2rem;
+}
+
+kbd kbd {
+  padding: 0;
+  font-size: 100%;
+  font-weight: 700;
+} */
+
+/* pre {
+  display: block;
+  font-size: 87.5%;
+  color: #212529;
+}
+
+pre code {
+  font-size: inherit;
+  color: inherit;
+  word-break: normal;
+} */
+
+/* .pre-scrollable {
+  max-height: 340px;
+  overflow-y: scroll;
+}
+
+.container {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 } */
 
 @media (min-width: 576px) {
