--- a/css/default.css
+++ b/css/default.css
@@ -8994,7 +8994,7 @@ button.bg-dark:focus {
   }
 }
 
-.text-monospace {
+/* .text-monospace {
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !important;
 }
 
@@ -9014,8 +9014,8 @@ button.bg-dark:focus {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-}
-
+} */
+/*
 .text-left {
   text-align: left !important;
 }
@@ -9026,9 +9026,9 @@ button.bg-dark:focus {
 
 .text-center {
   text-align: center !important;
-}
+} */
 
-@media (min-width: 576px) {
+/* @media (min-width: 576px) {
   .text-sm-left {
     text-align: left !important;
   }
@@ -9038,9 +9038,9 @@ button.bg-dark:focus {
   .text-sm-center {
     text-align: center !important;
   }
-}
+} */
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   .text-md-left {
     text-align: left !important;
   }
@@ -9074,8 +9074,8 @@ button.bg-dark:focus {
   .text-xl-center {
     text-align: center !important;
   }
-}
-
+} */
+/*
 .text-lowercase {
   text-transform: lowercase !important;
 }
@@ -9223,9 +9223,9 @@ a.text-dark:hover, a.text-dark:focus {
 
 .invisible {
   visibility: hidden !important;
-}
+} */
 
-@media print {
+/* @media print {
   *,
   *::before,
   *::after {
@@ -9302,4 +9302,4 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6;
   }
-}
+} */
