Default css part 4/8

--- a/css/default.css
+++ b/css/default.css
@@ -7062,7 +7062,7 @@ button.bg-dark:focus {
   z-index: 1030;
 }
 
-@supports (position: sticky) {
+/* @supports (position: sticky) {
   .sticky-top {
     position: sticky;
     top: 0;
@@ -7104,11 +7104,7 @@ button.bg-dark:focus {
 
 .shadow-none {
   box-shadow: none !important;
-}
-
-
-/* 4 */
-/*
+} */
 
 .w-25 {
   width: 25% !important;
@@ -7184,4 +7180,4 @@ button.bg-dark:focus {
   pointer-events: auto;
   content: "";
   background-color: rgba(0, 0, 0, 0);
-} */
+}
