--- a/css/default.css
+++ b/css/default.css
@@ -6186,7 +6186,7 @@ button.bg-dark:focus {
 .d-inline-flex {
   display: inline-flex !important;
 }
-
+/* 5 */
 /* @media (min-width: 576px) {
   .d-sm-none {
     display: none !important;
@@ -6379,7 +6379,8 @@ button.bg-dark:focus {
 .embed-responsive-1by1::before {
   padding-top: 100%;
 }
-/*
+
+
 .flex-row {
   flex-direction: row !important;
 }
@@ -6515,6 +6516,9 @@ button.bg-dark:focus {
 .align-self-stretch {
   align-self: stretch !important;
 }
+
+/* 5 */
+/*
 
 @media (min-width: 576px) {
   .flex-sm-row {
