--- a/css/default.css
+++ b/css/default.css
@@ -1187,9 +1187,7 @@ mark,
   }
 }
 
-/* 20 */
-
-/* .nav {
+.nav {
   display: flex;
   flex-wrap: wrap;
   padding-left: 0;
@@ -1268,7 +1266,7 @@ mark,
   flex-basis: 0;
   flex-grow: 1;
   text-align: center;
-} */
+}
 
 .tab-content > .tab-pane {
   display: none;
