--- a/css/main.css
+++ b/css/main.css
@@ -729,7 +729,7 @@ html {
     width: 100%;
     margin-top: 40px;
     display: block;
-    background: url(../img/cam2.webp);
+    background: url(../img/cam2.webp) no-repeat;
     border-radius: 20px;
     background-size: cover;
     background-position: 0 0;
